updates for duke-21x upgrade